# systema

./: .gitignore  AUTHORS  ChangeLog  FAQ  INSTALL  MANIFEST  Makefile  Makefile.am  Makefile.in  README  README.md  THANKS  TODO  build.sh  config.h.in  configure  configure.ac  install.sh
bootstrap/: Makefile.am  arch.c  common.h  emit.c  func.c  main.c  scope.c  sysa  sysa.sh  sysl  sysp.sh
bootstrap/assembler/: main.c
bootstrap/backend/: main.c  sysb.sh
bootstrap/frontend/: arch.c  ass.c  block.c  cast.c  dim.c  do.c  factor.c  lex.c  literal.c  main.c  match.c  math.c  record.c  symbol.c  type.c  unsigned.c
bootstrap/linker/: main.c  sysl.sh
bootstrap/macro/: main.c
bootstrap/utils/: dummy.c
compiler/: Makefile.am  Makefile.in  alloc.c  arch.c  ass.c  binary.c  block.c  cast.c  common.h  dim.c  do.c  emit.c  err.c  expr.c  expr_list.c  factor.c  func.c  id_list.c  io.c  lex.c  literal.c  logic.c  main.c  main.sh  match.c  math.c  parse.c  scope.c  size.c  stack.c  symbol.c  sysa.sh  sysc.sh  sysl.sh  sysp.sh  ternif.c  text.c  type.c  unary.c  unsigned.c  (+1 more)
compiler/backend/: main.sys
compiler/frontend/: AAAAAAA.inc  AST.inc  AST.sys  Codegen.inc  Codegen.sys  Error.inc  Error.sys  Init.inc  Init.sys  Lexer.inc  Lexer.sys  Main.sys  Parser.inc  Parser.sys  Semantic.inc  Semantic.sys  Symtab.inc  Symtab.sys  alloc.sys  arch.sys  ass.sys  block.sys  cast.sys  common.inc  dim.sys  do.sys  emit.sys  err.sys  expr.sys  expr_list.sys  factor.sys  func.sys  id_list.sys  io.sys  lex.sys  literal.sys  logic.sys  main.sys  match.sys  math.sys  (+10 more)
compiler/linker/: main.sys
compiler/preproc/: sysp.sh
compiler/utils/: Unix.sys  Utils.inc
doc/: Makefile.am  Makefile.in
misc/: Makefile.in  systema.lang
old/assembler/: main.sys
old/frontend/: alloc.sys  arch.sys  block.sys  cast.sys  dim.sys  emit.sys  err.sys  func.sys  id_list.sys  lex.sys  literal.sys  math.sys  parse.sys  record.sys  size.sys  ternif.sys  unsigned.sys  util.sys
old/macro/: main.sys
samples/: Makefile.am  Makefile.in  hello.sys
samples/hello/: Makefile.am  Makefile.in  hello.sys
samples/hello_world/: Makefile.am  Makefile.in  hello_world.m  hello_world.sy
src/bootstrap/: arch.c  emit.c  match.c  sysp.sh
src/samples/hello/: hello.sys
sysa/: README
sysc/: README
sysf/: alloc.sys  arch.sys  ass.sys  common.inc  dim.sys  emit.sys  expr.sys  factor.sys  io.sys  lex.sys  logic.sys  math.sys  parse.sys  record.sys  text.sys
sysl/: README
sysp/: README
